--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Aiman</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
 
     <div class="homeContainer">
         <div class="homeImg">
-            <img src="../img/aiman.jpg" alt="aimanImg">
+            <img src="./img/aiman.jpg" alt="aimanImg">
         </div>
         <div class="homeText">
             <h1>Hi, I'm <span>Aiman</span></h1>
@@ -32,5 +32,6 @@
     </div>
 
     <div class="skillsContainer"></div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
