--- a/index.html
+++ b/index.html
@@ -31,7 +31,40 @@
         </div>
     </div>
 
-    <div class="skillsContainer"></div>
+    <div id="skills" class="skillsContainer">
+        <h2>My <span>Skills</span></h2>
+        <div class="skill">
+            <h3>PHP</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="65"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>SQL</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="55"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>HTML</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="80"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>CSS</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="75"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>JavaScript</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="60"></div>
+            </div>
+        </div>
+    </div>
+    
     <script src="./js/script.js"></script>
 </body>
 </html>
