Added the about section + some additional styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/6d9d211828.js" crossorigin="anonymous"></script>
     <title>Aiman</title>
 </head>
+
 <body>
     <nav>
         <div class="logo">
@@ -19,20 +22,20 @@
         </ul>
     </nav>
 
-    <div class="homeContainer">
+    <div id="home" class="homeContainer">
         <div class="homeImg">
             <img src="./img/aiman.jpg" alt="aimanImg">
         </div>
         <div class="homeText">
             <h1>Hi, I'm <span>Aiman</span></h1>
-            <p>Ambitious software developer eager to make an impact, 
-                skilled in Scrum/Agile, adaptable to new challenges, 
+            <p>Ambitious software developer eager to make an impact,
+                skilled in Scrum/Agile, adaptable to new challenges,
                 and excelling in both solo and team environments.</p>
         </div>
     </div>
 
     <div id="skills" class="skillsContainer">
-        <h2>My <span>Skills</span></h2>
+        <h1>My <span>Skills</span></h1>
         <div class="skill">
             <h3>PHP</h3>
             <div class="progress">
@@ -64,7 +67,57 @@
             </div>
         </div>
     </div>
-    
+
+    <div id="about" class="aboutContainer">
+        <h1>About <span>Me</span></h1>
+        <div class="cardContainer">
+            <div class="cardContent">
+                <h2>Student</h2>
+                <h4><a href="https://www.gildeopleidingen.nl/" target="_blank">Gilde Opleidingen</a></h4>
+                <p>- Engaged in a client-focused learning environment that replicates real-world industry practices.</p>
+                <p>- Gained hands-on experience by working on projects as if collaborating with actual clients.</p>
+                <p>- Developed problem-solving skills and adaptability through practical, scenario-based learning.</p>
+                <p>- Acquired workforce-ready expertise beyond traditional classroom education.</p>
+                <h4>August 2021 - February 2025</h4>
+                <h4>
+                    <i class="fa-solid fa-location-dot"></i>
+                    Roermond, NL
+                </h4>
+            </div>
+            <div class="cardContent">
+                <h2>Intern</h2>
+                <h4><a href="https://ibi2.nl/" target="_blank">IBI2</a></h4>
+                <p>- Collaborated with a team of 3 developers to design and build a scan application that optimized
+                    workflows,
+                    reducing a 32-hour manual process to just 2 hours.</p>
+                <p>- Contributed to coding, testing, and deployment to ensure efficiency and reliability.</p>
+                <h4>February 2023 - June 2023</h4>
+                <h4>
+                    <i class="fa-solid fa-location-dot"></i>
+                    Blerick, NL
+                </h4>
+            </div>
+            <div class="cardContent">
+                <h2>Intern</h2>
+                <h4><a href="https://arsprintmedia.jimdosite.com/" target="_blank">ARSPrintMedia</a></h4>
+                <p>- Styled and customized WordPress front-end designs to enhance user experience and align with
+                    branding requirements.</p>
+                <p>- Developed a dynamic calculator to determine precise measurement overlaps for book printing.</p>
+                <p>- Conducted database analyses to extract detailed insights on yearly income, client statistics, and
+                    operational performance.</p>
+                <p>- Built an advanced dashboard integrating multiple data sources to display real-time production
+                    metrics and queue information for upcoming tasks.</p>
+                <h4>
+                    August 2024 - January 2025
+                </h4>
+                <h4>
+                    <i class="fa-solid fa-location-dot"></i>
+                    Roermond, NL
+                </h4>
+            </div>
+        </div>
+    </div>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
