Added projects container, still needs some changes but for now this will work.

--- a/index.html
+++ b/index.html
@@ -45,25 +45,31 @@
         <div class="skill">
             <h3>SQL</h3>
             <div class="progress">
-                <div class="progressBar" dataPercent="55"></div>
+                <div class="progressBar" dataPercent="60"></div>
             </div>
         </div>
         <div class="skill">
             <h3>HTML</h3>
             <div class="progress">
-                <div class="progressBar" dataPercent="80"></div>
+                <div class="progressBar" dataPercent="72"></div>
             </div>
         </div>
         <div class="skill">
             <h3>CSS</h3>
             <div class="progress">
-                <div class="progressBar" dataPercent="75"></div>
+                <div class="progressBar" dataPercent="65"></div>
             </div>
         </div>
         <div class="skill">
             <h3>JavaScript</h3>
             <div class="progress">
-                <div class="progressBar" dataPercent="60"></div>
+                <div class="progressBar" dataPercent="55"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>TypeScript</h3>
+            <div class="progress">
+                <div class="progressBar" dataPercent="50"></div>
             </div>
         </div>
     </div>
@@ -117,6 +123,64 @@
             </div>
         </div>
     </div>
+    
+    <div id="projects" class="projectsContainer">
+        <h1>My <span>Projects</span></h1>
+        <div class="projectsGrid">
+            <div class="projectCard">
+                <h2>Drive Smart</h2>
+                <p>A final exam project developed without AI assistance, designed for a driving school. 
+                    The application allows students, including those with disabilities, to purchase lesson bundles and schedule driving sessions. 
+                    It also includes CRUD operations for managing vehicles, students, and instructors, enabling seamless lesson planning.</p>
+                    <h4>
+                        School (PHP, HTML, CSS)
+                    </h4>
+            </div>
+            <div class="projectCard">
+                <h2>Fire Arcade</h2>
+                <p>An application for an arcade equipment supplier that rents out gaming machines for events and arcade centers. 
+                    It features CRUD operations for managing rental contracts and accounts, 
+                    ensuring smooth tracking of rented equipment and client agreements.</p>
+                    <h4>
+                        School (PHP, HTML, CSS)
+                    </h4>
+            </div>
+            <div class="projectCard">
+                <h2>Las Tapas</h2>
+                <p>A restaurant management application for tablet-based ordering. 
+                    Customers can order directly from their table, and orders are sent to the kitchen where chefs track and complete them. 
+                    The app also includes a built-in checkout system for seamless payment processing.</p>
+                    <h4>
+                        School (PHP, HTML, CSS)
+                    </h4>
+            </div>
+            <div class="projectCard">
+                <h2>Audio Meter</h2>
+                <p>An application designed to measure a person's hearing curve by analyzing their sensitivity to different frequencies. 
+                    It helps calibrate and generate custom sound profiles to train and adjust hearing based on deviations from the average hearing range.</p>
+                    <h4>
+                        School (TS/JS, HTML, CSS)
+                    </h4>
+            </div>
+            <div class="projectCard">
+                <h2>Book Top Margin Calculator</h2>
+                <p>A tool that calculates the optimal top margin for book printing based on sheet and cover dimensions. 
+                    It ensures precise alignment with printing machine needles, resulting in accurately placed book pages and a professional final product.</p>
+                    <h4>
+                        Internship (JS, HTML, CSS)
+                    </h4>
+            </div>
+            <div class="projectCard">
+                <h2>Production Dashboard</h2>
+                <p>A real-time dashboard displaying daily book production data along with a queue for upcoming production tasks. 
+                    It includes an automatic refresh function to ensure up-to-date tracking of production progress and scheduling.</p>
+                    <h4>
+                        Internship (TS/JS, HTML, CSS)
+                    </h4>
+            </div>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
 </body>
 
