footer change to the project cards

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     The application allows students, including those with disabilities, to purchase lesson bundles and schedule driving sessions. 
                     It also includes CRUD operations for managing vehicles, students, and instructors, enabling seamless lesson planning.</p>
                     <h4>
-                        School (PHP, HTML, CSS)
+                        PHP - HTML - CSS
                     </h4>
             </div>
             <div class="projectCard">
@@ -142,7 +142,7 @@
                     It features CRUD operations for managing rental contracts and accounts, 
                     ensuring smooth tracking of rented equipment and client agreements.</p>
                     <h4>
-                        School (PHP, HTML, CSS)
+                        PHP - HTML - CSS
                     </h4>
             </div>
             <div class="projectCard">
@@ -151,7 +151,7 @@
                     Customers can order directly from their table, and orders are sent to the kitchen where chefs track and complete them. 
                     The app also includes a built-in checkout system for seamless payment processing.</p>
                     <h4>
-                        School (PHP, HTML, CSS)
+                        PHP - HTML - CSS
                     </h4>
             </div>
             <div class="projectCard">
@@ -159,7 +159,7 @@
                 <p>An application designed to measure a person's hearing curve by analyzing their sensitivity to different frequencies. 
                     It helps calibrate and generate custom sound profiles to train and adjust hearing based on deviations from the average hearing range.</p>
                     <h4>
-                        School (TS/JS, HTML, CSS)
+                        TS - JS - HTML - CSS
                     </h4>
             </div>
             <div class="projectCard">
@@ -167,7 +167,7 @@
                 <p>A tool that calculates the optimal top margin for book printing based on sheet and cover dimensions. 
                     It ensures precise alignment with printing machine needles, resulting in accurately placed book pages and a professional final product.</p>
                     <h4>
-                        Internship (JS, HTML, CSS)
+                        JS - HTML - CSS
                     </h4>
             </div>
             <div class="projectCard">
@@ -175,7 +175,7 @@
                 <p>A real-time dashboard displaying daily book production data along with a queue for upcoming production tasks. 
                     It includes an automatic refresh function to ensure up-to-date tracking of production progress and scheduling.</p>
                     <h4>
-                        Internship (TS/JS, HTML, CSS)
+                        TS - JS - HTML - CSS
                     </h4>
             </div>
         </div>
