Finishing touches to the design & contact section created. Also added reference person to my 2nd internship.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
             <div class="cardContent">
                 <h2>Intern</h2>
                 <h4><a href="https://arsprintmedia.jimdosite.com/" target="_blank">ARSPrintMedia</a></h4>
+                <h4>Reference: Mr. Simons (IT-Specialist)</h4>
+                <h4>b.simons@arsprintmedia.nl</h4>
                 <p>- Styled and customized WordPress front-end designs to enhance user experience and align with
                     branding requirements.</p>
                 <p>- Developed a dynamic calculator to determine precise measurement overlaps for book printing.</p>
@@ -123,61 +125,78 @@
             </div>
         </div>
     </div>
-    
+
     <div id="projects" class="projectsContainer">
         <h1>My <span>Projects</span></h1>
         <div class="projectsGrid">
             <div class="projectCard">
                 <h2>Drive Smart</h2>
-                <p>A final exam project developed without AI assistance, designed for a driving school. 
-                    The application allows students, including those with disabilities, to purchase lesson bundles and schedule driving sessions. 
-                    It also includes CRUD operations for managing vehicles, students, and instructors, enabling seamless lesson planning.</p>
-                    <h4>
-                        PHP - HTML - CSS
-                    </h4>
+                <p>A final exam project developed without AI assistance, designed for a driving school.
+                    The application allows students, including those with disabilities, to purchase lesson bundles and
+                    schedule driving sessions.
+                    It also includes CRUD operations for managing vehicles, students, and instructors, enabling seamless
+                    lesson planning.</p>
+                <h4>
+                    PHP - HTML - CSS
+                </h4>
             </div>
             <div class="projectCard">
                 <h2>Fire Arcade</h2>
-                <p>An application for an arcade equipment supplier that rents out gaming machines for events and arcade centers. 
-                    It features CRUD operations for managing rental contracts and accounts, 
+                <p>An application for an arcade equipment supplier that rents out gaming machines for events and arcade
+                    centers.
+                    It features CRUD operations for managing rental contracts and accounts,
                     ensuring smooth tracking of rented equipment and client agreements.</p>
-                    <h4>
-                        PHP - HTML - CSS
-                    </h4>
+                <h4>
+                    PHP - HTML - CSS
+                </h4>
             </div>
             <div class="projectCard">
                 <h2>Las Tapas</h2>
-                <p>A restaurant management application for tablet-based ordering. 
-                    Customers can order directly from their table, and orders are sent to the kitchen where chefs track and complete them. 
+                <p>A restaurant management application for tablet-based ordering.
+                    Customers can order directly from their table, and orders are sent to the kitchen where chefs track
+                    and complete them.
                     The app also includes a built-in checkout system for seamless payment processing.</p>
-                    <h4>
-                        PHP - HTML - CSS
-                    </h4>
+                <h4>
+                    PHP - HTML - CSS
+                </h4>
             </div>
             <div class="projectCard">
                 <h2>Audio Meter</h2>
-                <p>An application designed to measure a person's hearing curve by analyzing their sensitivity to different frequencies. 
-                    It helps calibrate and generate custom sound profiles to train and adjust hearing based on deviations from the average hearing range.</p>
-                    <h4>
-                        TS - JS - HTML - CSS
-                    </h4>
+                <p>An application designed to measure a person's hearing curve by analyzing their sensitivity to
+                    different frequencies.
+                    It helps calibrate and generate custom sound profiles to train and adjust hearing based on
+                    deviations from the average hearing range.</p>
+                <h4>
+                    TS - JS - HTML - CSS
+                </h4>
             </div>
             <div class="projectCard">
                 <h2>Book Top Margin Calculator</h2>
-                <p>A tool that calculates the optimal top margin for book printing based on sheet and cover dimensions. 
-                    It ensures precise alignment with printing machine needles, resulting in accurately placed book pages and a professional final product.</p>
-                    <h4>
-                        JS - HTML - CSS
-                    </h4>
+                <p>A tool that calculates the optimal top margin for book printing based on sheet and cover dimensions.
+                    It ensures precise alignment with printing machine needles, resulting in accurately placed book
+                    pages and a professional final product.</p>
+                <h4>
+                    JS - HTML - CSS
+                </h4>
             </div>
             <div class="projectCard">
                 <h2>Production Dashboard</h2>
-                <p>A real-time dashboard displaying daily book production data along with a queue for upcoming production tasks. 
-                    It includes an automatic refresh function to ensure up-to-date tracking of production progress and scheduling.</p>
-                    <h4>
-                        TS - JS - HTML - CSS
-                    </h4>
+                <p>A real-time dashboard displaying daily book production data along with a queue for upcoming
+                    production tasks.
+                    It includes an automatic refresh function to ensure up-to-date tracking of production progress and
+                    scheduling.</p>
+                <h4>
+                    TS - JS - HTML - CSS
+                </h4>
             </div>
+        </div>
+    </div>
+
+    <div id="contact" class="contactContainer">
+        <h1>Contact <span>Me</span></h1>
+        <div class="contactCard">
+            <h2>My Email:</h2>
+            <p><a href="mailto:ahrcapital@outlook.com">ahrcapital@outlook.com</a></p>
         </div>
     </div>
 
